--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-bootstrap": "^2.10.2",
+    "bootstrap": "^5.3.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.35.0",
